--- a/index.html
+++ b/index.html
@@ -153,23 +153,18 @@
                 <input type="search" placeholder="Search Here....">
                 <ul class="float-left">
                     <li class="has-sub">
-                        <a href="javascript:;">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li class="has-sub">
                         <a href="javascript:;">Services</a>
                         <ul>
-                            <li><a href="service.html">Service page</a></li>
                             <li><a href="service-mani.html"> Manicure Service</a></li>
                             <li><a href="service-padi.html"> Pedicure Service</a></li>
                             <li><a href="service-nailart.html"> Nails Art Service</a></li>
-                            <li><a href="service-parahand.html">Paraffin Hand Service </a></li>
                         </ul>
                     </li>
                     <li class="has-sub">
-                        <a href="javascript:;">Gallery</a>
-                        <ul>
-                            <li><a href="gallery.html">3 Column</a></li>
-                        </ul>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.picktime.com/a8df8044-c612-4dd6-90cb-323afe05a67d">
