--- a/gallery.html
+++ b/gallery.html
@@ -712,6 +712,16 @@
     <script src="js/custom.js"></script>
     <!-- contact form js start -->
     <script src="js/contact_form.js"></script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5DWMRQKBCY">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5DWMRQKBCY');
+</script>
 </body>
 
 </html>
