--- a/index.html
+++ b/index.html
@@ -690,6 +690,17 @@
             return false;
         });
     </script>
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5DWMRQKBCY">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5DWMRQKBCY');
+</script>
 </body>
 
 </html>
